--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://c443dcf5-03e8-4540-a57c-a46af7d38732.preview.emergentagent.com
 WDS_SOCKET_PORT=443
